# encyclo-mapoli

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .spectral.yaml  ACCOUNT_HISTORY_REPORT_IMPLEMENTATION.md  AGENTS.md  AGE_CALCULATION_EF_CORE_ORACLE_GUIDE.md  API_LINTING_ACTION_GUIDE.md  API_LINTING_FIX_PROGRESS.md  API_LINTING_PHASE_1_COMPLETE.md  BACKEND_FIXES_SUMMARY.md  BADGE_LINK_NAVIGATION_FIX.md  BADGE_VISUAL_LINK_STYLING.md  BALANCE_REPORTS_CROSS_REFERENCE_MATRIX.md  BRANCH_CREATED.md  BUILDINFO_SEPARATION_STRATEGY.md  BeneficiaryInquiryService_Fixes_Summary.md  CLAUDE.md  CLOUD_RUNNER_MIGRATION.md  CODE_REVIEW_Backend_Validation.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_MasterUpdateSummaryTable.md  COMPREHENSIVE_TEST_FIX_SUMMARY.md  ChangedFilesReport.txt  DIVORCE_REPORT_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  DTO_INVENTORY.csv  DTO_INVENTORY_COMPLETE.md  DTO_INVENTORY_README.md  DTO_WORK_ITEMS.md  ENDPOINT_REQUEST_DTOS_ANALYSIS.json  ENDPOINT_SECURITY_ANALYSIS.json  FINAL_TEST_FIXES_SUMMARY.md  FINAL_TEST_FIX_REPORT.md  FRONTEND_VERSION_MANAGEMENT.md  GIT_BRANCH_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_ASSESSMENT.md  (+82 more)
.aspire/: settings.json
.claude/: settings.local.json
services/api/: pyproject.toml
services/api/src/api/: __init__.py  config.py  main.py
services/api/src/api/models/: __init__.py  election.py
services/api/src/api/routers/: elections.py  reports.py  results.py
services/api/src/api/services/: cache.py  data_transformer.py  election_fetcher.py
services/api/tests/: test_api.py
(+4852 files in other folders)
